5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1633_2920.log
== TEST (2019-04-02 19:06:51) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(input(26.90)
suconatural= float(input(3.50))
sobremesa= float(input(3.00))
print(round, 2))
-- ERROR:
File "XXXX", line 5
    suconatural= float(input(3.50))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:06:58) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(input(26.90)
suconatural= float(input(3.50))
sobremesa= float(input(3.00))
print(round, 2))
-- ERROR:
File "XXXX", line 5
    suconatural= float(input(3.50))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:07:27) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(26.90)
suconatural= floa(3.50)
sobremesa= float(3.00)
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    suconatural= floa(3.50)
NameError: name 'floa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:07:49) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(26.90)
suconatural= float(3.50)
sobremesa= float(3.00)
print(round, 2)
-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:07:59) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(26.90)
suconatural= float(3.50)
sobremesa= float(3.00)
print(round, 2)
-- EXECUTION TIME:
0.152321
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
<built-in function round> 2
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
<built-in function round> 2
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
<built-in function round> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:08:03) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(26.90)
suconatural= float(3.50)
sobremesa= float(3.00)
print(round, 2)
-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:08:30) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(26.90)
suconatural= float(3.50)
sobremesa= float(3.00)
print(round,  2)
-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:08:44) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(26.90)
suconatural= float(3.50)
sobremesa= float(3.00)
print(round,2)
-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:08:51) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(26.90)
suconatural= float(3.50)
sobremesa= float(3.00)
print(round,2)
-- EXECUTION TIME:
0.203898
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
<built-in function round> 2
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
<built-in function round> 2
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
<built-in function round> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:08:52) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(26.90)
suconatural= float(3.50)
sobremesa= float(3.00)
print(round,2)
-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:48) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(26.90)
suconatural= float(3.50)
sobremesa= float(3.00)
total= selfservice+suconatural+sobremesa
print(round,2)
-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:10:34) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(input(26.90))
suconatural= float(input(3.50))
sobremesa= float(input(3.00))
total= selfservice+suconatural+sobremesa
print(round,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    selfservice= float(input(26.90))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:10:46) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(input(26.90))
suconatural= float(input(3.50))
sobremesa= float(input(3.00))
total= selfservice+suconatural+sobremesa
print(round,2)
-- EXECUTION TIME:
0.193335
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    selfservice= float(input(26.90))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:10:49) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(input(26.90))
suconatural= float(input(3.50))
sobremesa= float(input(3.00))
total= selfservice+suconatural+sobremesa
print(round,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    selfservice= float(input(26.90))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:11:29) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(input(26.90))
suconatural= float(input(3.50))
sobremesa= float(input(3.00))
total= selfservice+suconatural+sobremesa
print(round,2)
-- EXECUTION TIME:
0.197415
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    selfservice= float(input(26.90))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:11:33) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(input(26.90))
suconatural= float(input(3.50))
sobremesa= float(input(3.00))
total= selfservice+suconatural+sobremesa
print(round,2)
-- EXECUTION TIME:
0.173981
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    selfservice= float(input(26.90))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:11:34) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(input(26.90))
suconatural= float(input(3.50))
sobremesa= float(input(3.00))
total= selfservice+suconatural+sobremesa
print(round,2)
-- EXECUTION TIME:
0.103888
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1633/2920/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:11:40) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(int(26.90))
suconatural= float(int(3.50))
sobremesa= float(int(3.00))
total= selfservice+suconatural+sobremesa
print(round,2)
-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:12:00) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(input(26.90))
suconatural= float(input(3.50))
sobremesa= float(input(3.00))
total= selfservice+suconatural+sobremesa
print(round,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    selfservice= float(input(26.90))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:12:07) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(input(26.90))
suconatural= float(input(3.50))
sobremesa= float(input(3.00))
total= selfservice+suconatural+sobremesa
print(round,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    selfservice= float(input(26.90))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:12:08) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(input(26.90))
suconatural= float(input(3.50))
sobremesa= float(input(3.00))
total= selfservice+suconatural+sobremesa
print(round,2)
-- EXECUTION TIME:
0.103846
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    selfservice= float(input(26.90))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:12:08) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(input(26.90))
suconatural= float(input(3.50))
sobremesa= float(input(3.00))
total= selfservice+suconatural+sobremesa
print(round,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    selfservice= float(input(26.90))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:12:29) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
selfservice= float(input(26.90))
suconatural= float(input(3.50))
sobremesa= float(input(3.00))
total= selfservice + suconatural + sobremesa
print(round,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    selfservice= float(input(26.90))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:13:16) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= float(input(26.90))
suco= float(input(3.50))
sobr= float(input(3.00))
total= se + suco + sobr
print(round,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= float(input(26.90))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:15:21) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= float(input(26.90))
suco= float(input(3.5))
sobr= float(input(3.0))
quantidade= 26.90 + 3.5 + 3.0
total= se + suco + sobr
print(round,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= float(input(26.90))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:16:56) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= float(input(26.90))
suco= float(input(3.5))
sobr= float(input(3.0))
quantidade1= 26.90
quantidade1= 3.5
quantidade3= 3.0
total= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= float(input(26.90))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:17:06) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= float(input(26.90))
suco= float(input(3.5))
sobr= float(input(3.0))
quantidade1= 26.90
quantidade1= 3.5
quantidade3= 3.0
total= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
print(round, 2)
-- EXECUTION TIME:
0.143142
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    se= float(input(26.90))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:17:07) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= float(input(26.90))
suco= float(input(3.5))
sobr= float(input(3.0))
quantidade1= 26.90
quantidade1= 3.5
quantidade3= 3.0
total= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= float(input(26.90))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:00) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= float(input(26.90))
suco= float(input(3.5))
sobr= float(input(3.0))
quantidade1= 26.90
quantidade1= 3.5
quantidade3= 3.0
preco= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
total= (preco)
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= float(input(26.90))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:51) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= (input(3.0))
quantidade1= 26.90
quantidade1= 3.5
quantidade3= 3.0
preco= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
total= (preco)
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input(26.90)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:19:10) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= (input(3.0))
quantidade1= 26.90
quantidade1= 3.5
quantidade3= 3.0
preco= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
total= (preco)
print(round, 2)
-- EXECUTION TIME:
0.14264
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    se= input(26.90)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:19:12) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= (input(3.0))
quantidade1= 26.90
quantidade1= 3.5
quantidade3= 3.0
preco= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
total= (preco)
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input(26.90)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:20:11) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= (input(3.0))
quantidade1= 26.90
quantidade1= 3.5
quantidade3= 3.0
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= (preco)
print(round, 2)
-- EXECUTION TIME:
0.179989
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    se= input(26.90)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:20:11) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= (input(3.0))
quantidade1= 26.90
quantidade1= 3.5
quantidade3= 3.0
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= (preco)
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input(26.90)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:20:59) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= (input(3.0))
quantidade1= 26.90
quantidade1= 3.5
quantidade3= 3.0
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= int(preco)
print(round, 2)
-- EXECUTION TIME:
0.174013
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    se= input(26.90)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:20:59) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= (input(3.0))
quantidade1= 26.90
quantidade1= 3.5
quantidade3= 3.0
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= int(preco)
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input(26.90)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:21:43) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= int(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= 26.90
quantidade1= 3.5
quantidade3= 3.0
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= int(preco)
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    suco= input(3.5)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:22:05) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= int(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= 26.90
quantidade2= 3.5
quantidade3= 3.0
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= int(preco)
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    suco= input(3.5)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:22:30) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= int(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= 26.90
quantidade2= 3.5
quantidade3= 3.0
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(int(preco)
print(round, 2)
-- ERROR:
File "XXXX", line 12
    print(round, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:22:32) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= int(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= 26.90
quantidade2= 3.5
quantidade3= 3.0
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(int(preco)
print(round, 2)
-- EXECUTION TIME:
0.219529
-- ERROR:
  File "/home/codebench/codes/1633/2920/main.py", line 12
    print(round, 2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:22:33) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= int(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= 26.90
quantidade2= 3.5
quantidade3= 3.0
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(int(preco)
print(round, 2)
-- ERROR:
File "XXXX", line 12
    print(round, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:22:49) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= int(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= 26.90
quantidade2= 3.5
quantidade3= 3.0
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(int(preco)
print (round, 2)
-- ERROR:
File "XXXX", line 12
    print (round, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:22:52) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= int(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= 26.90
quantidade2= 3.5
quantidade3= 3.0
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(int(preco)
print (round, 2)
-- EXECUTION TIME:
0.255846
-- ERROR:
  File "/home/codebench/codes/1633/2920/main.py", line 12
    print (round, 2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:22:58) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= int(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= 26.90
quantidade2= 3.5
quantidade3= 3.0
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(int(preco)
print(round, 2)
-- ERROR:
File "XXXX", line 12
    print(round, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:23:16) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= 26.90
quantidade2= 3.5
quantidade3= 3.0
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(int(preco)
print(round, 2)
-- ERROR:
File "XXXX", line 12
    print(round, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:23:27) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= 26.90
quantidade2= 3.5
quantidade3= 3.0
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(input(preco)
print(round, 2)
-- ERROR:
File "XXXX", line 12
    print(round, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:23:33) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= 26.90
quantidade2= 3.5
quantidade3= 3.0
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(input(preco))
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input(26.90)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:24:12) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= 
quantidade2= 
quantidade3= 
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(input(preco))
print(round, 2)
-- ERROR:
File "XXXX", line 7
    quantidade1= 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:24:20) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1=
quantidade2=
quantidade3=
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(input(preco))
print(round, 2)
-- ERROR:
File "XXXX", line 7
    quantidade1=
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:25:03) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(input(preco))
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input(26.90)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:25:14) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(input(preco))
print(round, 2)
-- EXECUTION TIME:
0.126755
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    se= input(26.90)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:25:38) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= (2000)
quantidade2= (4)
quantidade3= (2)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(input(preco))
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input(26.90)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:25:52) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= (2000)
quantidade2= (4)
quantidade3= (2)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(input(preco))
print(round, 2)
-- EXECUTION TIME:
0.14399
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    se= input(26.90)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:26:04) 
-- CODE:
texto= float(input("quantas gramas possui seu prato: "))
texto= float(input("a quantidade de bebidas: "))
texto= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= (2000)
quantidade2= (4)
quantidade3= (2)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(int(preco))
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input(26.90)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:27:01) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= float(input(26.90))
suco= float(input(3.5))
sobr= float(input(3.0))
quantidade1= (2000)
quantidade2= (4)
quantidade3= (2)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(int(preco))
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= float(input(26.90))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:27:36) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= float(input(26.90))
suco= float(input(3.5))
sobr= float(input(3.0))
quantidade1=
quantidade2=
quantidade3=
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(int(preco))
print(round, 2)
-- ERROR:
File "XXXX", line 7
    quantidade1=
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:27:45) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= float(input(26.90))
suco= float(input(3.5))
sobr= float(input(3.0))
quantidade1 =
quantidade2 =
quantidade3 =
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(int(preco))
print(round, 2)
-- ERROR:
File "XXXX", line 7
    quantidade1 =
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:28:13) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= float(input(26.90))
suco= float(input(3.5))
sobr= float(input(3.0))
quantidade1=
quantidade2=
quantidade3=
preco= (se * quantidade1) + (suco * quantidade2) + (sobr * quantidade3)
total= float(int(preco))
print(round, 2)
-- ERROR:
File "XXXX", line 7
    quantidade1=
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:28:44) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= float(input(26.90))
suco= float(input(3.5))
sobr= float(input(3.0))
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= (se * quantidade1) + (suco * quantidade2) + (sobr * quantidade3)
total= float(int(preco))
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= float(input(26.90))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:08) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= float(input(26.90))
suco= float(input(3.5))
sobr= float(int(3.0))
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= (se * quantidade1) + (suco * quantidade2) + (sobr * quantidade3)
total= float(int(preco))
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= float(input(26.90))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:43) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= float(input())
suco= float(input())
sobr= float(int())
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= (se * quantidade1) + (suco * quantidade2) + (sobr * quantidade3)
total= float(int(preco))
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:30:35) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= input()
suco= input()
sobr= int()
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= (se * quantidade1) + (suco * quantidade2) + (sobr * quantidade3)
total= float(int(preco))
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:30:43) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= input()
suco= input()
sobr= int()
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= (se * quantidade1) + (suco * quantidade2) + (sobr * quantidade3)
total= float(int(preco))
print(round, 2)
-- EXECUTION TIME:
0.222831
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    se= input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:33:18) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= input()
suco= input()
sobr= int()
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= (se * quantidade1) + (suco * quantidade2) + (sobr * quantidade3)
total= float(int(preco))
printtotal(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:33:37) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= input()
suco= input()
sobr= int()
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(int(preco))
printtotal(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:33:44) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= input()
suco= input()
sobr= int()
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(int(preco))
printtotal(round, 2)
-- EXECUTION TIME:
0.098706
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    se= input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:33:47) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= input()
suco= input()
sobr= int()
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(int(preco))
printtotal(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:34:25) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= input()
suco= input()
sobr= int()
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
total= float(int(preco))
printtotal(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:34:47) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= input()
suco= input()
sobr= int()
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
total= float(preco)
printtotal(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:35:23) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= input()
suco= input()
sobr= int()
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= float(int(preco))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:36:29) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= float(input(26.90)
suco= float(input(3.5)
sobr= float(int(3.0)
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= (preco)

-- ERROR:
File "XXXX", line 5
    suco= float(input(3.5)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:36:30) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= float(input(26.90)
suco= float(input(3.5)
sobr= float(int(3.0)
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= (preco)

-- ERROR:
File "XXXX", line 5
    suco= float(input(3.5)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:36:31) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= float(input(26.90)
suco= float(input(3.5)
sobr= float(int(3.0)
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= (preco)

-- ERROR:
File "XXXX", line 5
    suco= float(input(3.5)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:36:33) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= float(input(26.90)
suco= float(input(3.5)
sobr= float(int(3.0)
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= (preco)

-- ERROR:
File "XXXX", line 5
    suco= float(input(3.5)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:36:40) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= float(input(26.90)
suco= float(int(3.5)
sobr= float(int(3.0)
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= (preco)

-- ERROR:
File "XXXX", line 5
    suco= float(int(3.5)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:36:51) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= float(input(26.90)
suco= float(input(3.5)
sobr= float(int(3.0)
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= (preco)

-- ERROR:
File "XXXX", line 5
    suco= float(input(3.5)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:37:14) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= float(input(26.90)
suco= float(input(3.5)
sobr= float(int(3.0)
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= (preco)

-- ERROR:
File "XXXX", line 5
    suco= float(input(3.5)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:37:28) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= float(input(26.90))
suco= float(input(3.5))
sobr= float(int(3.0))
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= (preco)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= float(input(26.90))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:38:06) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= float(input(26.90))
suco= float(input(3.5))
sobr= float(int(3.0))
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= (preco)
print(raund, 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= float(input(26.90))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:38:42) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= int(3.0)
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= (preco)
print(raund, 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input(26.90)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:39:35) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se * quantidade1 + suco * quantidade2 + sobr * quantidade3
total= (preco)
print(preco(raund, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input(26.90)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:40:27) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= input(26.90)
suco= input(3.5)
sobr= input(3.0)
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
total= (preco)
print(preco(raund, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    se= input(26.90)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:41:12) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
print(26.90)
print(3.5)
print(3.0)
quantidade1= (se)
quantidade2= (suco)
quantidade3= (sobr)
preco= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
total= (preco)
print(preco(raund, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    quantidade1= (se)
NameError: name 'se' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:41:52) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
print(26.90)
print(3.5)
print(3.0)
quantidade1= input(se)
quantidade2= input(suco)
quantidade3= input(sobr)
preco= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
total= (preco)
print(preco(raund, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    quantidade1= input(se)
NameError: name 'se' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:42:21) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
print(26.90)
print(3.5)
print(3.0)
quantidade1= float(input(se)
quantidade2= float(input(suco)
quantidade3= float(input(sobr)
preco= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
total= (preco)
print(preco(raund, 2))

-- ERROR:
File "XXXX", line 8
    quantidade2= float(input(suco)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:42:34) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
print(26.90)
print(3.5)
print(3.0)
quantidade1= float(input(se))
quantidade2= float(input(suco))
quantidade3= float(input(sobr))
preco= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
total= (preco)
print(preco(raund, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    quantidade1= float(input(se))
NameError: name 'se' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:43:13) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
print(26.90)
print(3.5)
print(3.0)
quantidade1= float(input(texto1))
quantidade2= float(input(texto2))
quantidade3= float(input(texto3))
preco= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
total= (preco)
print(preco(raund, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    quantidade1= float(input(texto1))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:43:23) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
print(26.90)
print(3.5)
print(3.0)
quantidade1= float(input(texto1))
quantidade2= float(input(texto2))
quantidade3= float(input(texto3))
preco= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
total= (preco)
print(preco(raund, 2))

-- EXECUTION TIME:
0.128742
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 7, in <module>
    quantidade1= float(input(texto1))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:43:26) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
print(26.90)
print(3.5)
print(3.0)
quantidade1= float(input(texto1))
quantidade2= float(input(texto2))
quantidade3= float(input(texto3))
preco= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
total= (preco)
print(preco(raund, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    quantidade1= float(input(texto1))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:44:28) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= (26.90)
su= (3.5)
sob= (3.0)
quantidade1= float(input(texto1))
quantidade2= float(input(texto2))
quantidade3= float(input(texto3))
preco= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
total= (preco)
print(preco(raund, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    quantidade1= float(input(texto1))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:45:55) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= 26.90
su= 3.5
sob= 3.0
quantidade1= float(input(texto1))
quantidade2= float(input(texto2))
quantidade3= float(input(texto3))
preco= se*quantidade1 + suco*quantidade2 + sobr*quantidade3
total= (preco)
print(preco(raund, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    quantidade1= float(input(texto1))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:46:50) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= 26.90
su= 3.5
sob= 3.0
preco= se + suco + sobr
total= (preco)
print(preco(raund, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    preco= se + suco + sobr
NameError: name 'suco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:47:14) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= 26.90
su= 3.5
sob= 3.0
preco= se + suco + sobr
total= (preco)
print(raund, 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    preco= se + suco + sobr
NameError: name 'suco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:47:37) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= 26.90
su= 3.5
sob= 3.0
preco= se + su + sob
total= (preco)
print(raund, 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(raund, 2)
NameError: name 'raund' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:47:52) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= 26.90
su= 3.5
sob= 3.0
preco= se + su + sob
total= (preco)
print(round, 2)

-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:47:59) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= 26.90
su= 3.5
sob= 3.0
preco= se + su + sob
total= (preco)
print(round, 2)

-- EXECUTION TIME:
0.251281
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
<built-in function round> 2
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
<built-in function round> 2
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
<built-in function round> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:48:02) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= 26.90
su= 3.5
sob= 3.0
preco= se + su + sob
total= (preco)
print(round, 2)

-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:48:21) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= 26.90
su= 3.5
sob= 3.0
preco= se + su + sob
total= (preco)
print(round, 2)

-- EXECUTION TIME:
0.145533
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
<built-in function round> 2
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
<built-in function round> 2
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
<built-in function round> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:48:22) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= 26.90
su= 3.5
sob= 3.0
preco= se + su + sob
total= (preco)
print(round, 2)

-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:48:59) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= 26.90
su= 3.5
sob= 3.0
preco= se + su + sob
total= (preco)
print(round, 2)

-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:49:55) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= 26.90
su= 3.5
sob= 3.0
preco= se*26.90 + su*3.5 + sob*3.0
total= (preco)
print(round, 2)

-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:16:58) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= 26.90
su= 3.5
sob= 3.0
preco= se*26.90 + su*3.5 + sob*3.0
total= (preco)
print(round, 2)

-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:50:13) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= 26.90
su= 3.5
sob= 3.0
preco= se*26.90 + su*3.5 + sob*3.0
total= (preco)
print(round, 2)

-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:11:37) 
-- CODE:
texto1= float(input("quantas gramas possui seu prato: "))
texto2= float(input("a quantidade de bebidas: "))
texto3= float(input("a quantidade de sobremesas: "))
se= 26.90
su= 3.5
sob= 3.0
preco= se*26.90 + su*3.5 + sob*3.0
total= (preco)
print(round, 2)

-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
